--- a/index.html
+++ b/index.html
@@ -3,9 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Website</title>
+    <title>Jewellery</title>
+    <link rel="stylesheet" href="./assets/css/main.css" />
 </head>
 <body>
-    
+    <div class="websiteContainer">
+        <section class="slide">
+            <div class="header">
+                <div class="logo">Jewellery</div>
+                <div class="headerMenu">
+                    <ul class="menuList">
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">Shop</a></li>
+                        <li><a href="#">Product</a></li>
+                        <li><a href="#">Blog</a></li>
+                        <li><a href="#">Contact</a></li>
+                    </ul>
+                </div>
+                <div class="account">
+                    <button>Login / Register</button>
+                </div>
+            </div>
+
+            <div class="slideInfo">
+                <div class="slidetext">
+                    <h1>Discover a world of Jewellery</h1>
+                    <button>Explore BestSeller</button>
+                </div>
+                <div class="slideImg">
+                    <img src="./assets/images/slideimg2.png" alt="sliderImg" />
+                </div>
+            </div>
+        </section>
+
+    </div>
 </body>
 </html>
