--- a/index.html
+++ b/index.html
@@ -1,41 +1,145 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Jewellery</title>
     <link rel="stylesheet" href="./assets/css/main.css" />
-</head>
-<body>
+  </head>
+  <body>
     <div class="websiteContainer">
-        <section class="slide">
-            <div class="header">
-                <div class="logo">Jewellery</div>
-                <div class="headerMenu">
-                    <ul class="menuList">
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">Shop</a></li>
-                        <li><a href="#">Product</a></li>
-                        <li><a href="#">Blog</a></li>
-                        <li><a href="#">Contact</a></li>
-                    </ul>
-                </div>
-                <div class="account">
-                    <button>Login / Register</button>
-                </div>
+      <section class="slide">
+        <div class="header">
+          <div class="logo">Jewellery</div>
+          <div class="headerMenu">
+            <ul class="menuList">
+              <li><a href="#">Home</a></li>
+              <li><a href="#">Shop</a></li>
+              <li><a href="#">Product</a></li>
+              <li><a href="#">Blog</a></li>
+              <li><a href="#">Contact</a></li>
+            </ul>
+          </div>
+          <div class="account">
+            <button>Login / Register</button>
+          </div>
+        </div>
+
+        <div class="slideInfo">
+          <div class="slidetext">
+            <h1>
+              Discover a<br />
+              world of Jewellery
+            </h1>
+            <button>Explore BestSeller</button>
+          </div>
+          <div class="slideImg">
+            <img src="./assets/images/slideimg2.png" alt="sliderImg" />
+          </div>
+        </div>
+      </section>
+
+      <!-- inline-element -->
+      <!-- <span>hello</span>
+        <a href="#">google.com</a>
+        <button>submit</button> -->
+
+      <!-- block-element -->
+      <!-- <p>Hello </p>
+        <h1>World</h1>
+        <div>karachi</div>
+        <section>dubai</section> -->
+
+      <section class="ads">
+        <div class="adsbanners">
+          <div class="banner">
+            <img src="./assets/images/banner1.jpg" alt="" />
+            <p>New Arrivals</p>
+          </div>
+          <div class="banner">
+            <img src="./assets/images/banner2.jpg" alt="" />
+            <p>BestSeller</p>
+          </div>
+          <div class="banner">
+            <img src="./assets/images/banner3.jpg" alt="" />
+            <p>Clearance sale</p>
+          </div>
+        </div>
+      </section>
+
+      <section class="category">
+        <h2>TOP CATEGORIES</h2>
+        <div class="images">
+          <div class="bracelet">
+            <img src="./assets/images/bracelet.jpg" alt="" />
+            <p>BRACELETS</p>
+          </div>
+          <div class="watches">
+            <img src="./assets/images/watch.jpg" alt="" />
+            <p>WATCHES</p>
+          </div>
+          <div class="necklaces">
+            <img src="./assets/images/necklace.jpg" alt="" />
+            <p>NECKLACES</p>
+          </div>
+          <div class="earrings">
+            <img src="./assets/images/earrings.jpg" alt="" />
+            <p>EARRINGS</p>
+          </div>
+          <div class="ring">
+            <img src="./assets/images/ring.jpg" alt="" />
+            <p>RINGS</p>
+          </div>
+        </div>
+      </section>
+
+      <section class="about">
+        <div class="abouttext">
+          <h2>
+            HANDCRAFTED <br />
+            & ETHICALLY SOURCED
+          </h2>
+          <div class="point dflex">
+            <div>
+              <img
+                src="./assets/images/fairPrice.png"
+                height="20"
+                width="20"
+              />
             </div>
 
-            <div class="slideInfo">
-                <div class="slidetext">
-                    <h1>Discover a world of Jewellery</h1>
-                    <button>Explore BestSeller</button>
-                </div>
-                <div class="slideImg">
-                    <img src="./assets/images/slideimg2.png" alt="sliderImg" />
-                </div>
+            <div>
+              <h3>FAIR PRICING</h3>
+              <p>
+                Nullam quis ante. Pellentesque libero tortor, tincidunt et,
+                tinciduntamet est.In hac <br />
+                platea dictumst. Praesent nec nisl a purus blandit viverra
+              </p>
             </div>
-        </section>
+          </div>
 
+          <div class="point dflex">
+            <div>
+              <img
+                src="./assets/images/fairPrice.png"
+                height="20"
+                width="20"
+              />
+            </div>
+            <div>
+              <h3>HIGH QUALITY</h3>
+              <p>
+                Nullam quis ante. Pellentesque libero tortor, tincidunt et,
+                tinciduntamet est.In hac <br />
+                platea dictumst. Praesent nec nisl a purus blandit viverra
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="aboutImg">
+          <img class="aboutimg" src="assets/images/girl.jpg" alt="" />
+        </div>
+      </section>
     </div>
-</body>
+  </body>
 </html>
